--- a/dashboard/ingress.yaml
+++ b/dashboard/ingress.yaml
@@ -9,8 +9,8 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: "selfsigned"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    cert-manager.io/issuer: selfsigned
     forecastle.stakater.com/expose: "true"
     forecastle.stakater.com/instance: forecastle
     forecastle.stakater.com/group: "Admin"
@@ -19,7 +19,7 @@ spec:
   tls:
   - hosts:
     - kubernetes.home.lab
-    secretName: selfsigned-cert-tls
+    secretName: kubernetes-selfsigned-cert-tls
   rules:
   - host: kubernetes.home.lab
     http:
