--- a/metallb/metallb-config.yml
+++ b/metallb/metallb-config.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: kube-system
-  name: metallb-config
+  name: config
 data:
   metallb-config: |
     address-pools:
