--- a/registry/harbor/values.yaml
+++ b/registry/harbor/values.yaml
@@ -33,7 +33,7 @@ expose:
       notarySecretName: ""
   ingress:
     hosts:
-      core: core.home.lab
+      core: harbor.home.lab
       notary: notary.home.lab
     # set to the type of ingress controller if it has specific requirements.
     # leave as `default` for most ingress controllers.
@@ -113,7 +113,7 @@ expose:
 # the IP address of k8s node
 #
 # If Harbor is deployed behind the proxy, set it as the URL of proxy
-externalURL: https://core.home.lab
+externalURL: https://harbor.home.lab
 
 # The internal TLS used for harbor components secure communicating. In order to enable https
 # in each components tls cert files need to provided in advance.
