--- a/metallb/metallb-config.yml
+++ b/metallb/metallb-config.yml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   namespace: kube-system
-  name: config
+  name: metallb-config
 data:
-  metallb-config: |
+  config: |
     address-pools:
     - name: default
       protocol: layer2
