--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ get_helm.sh
 checkov.results.xml
 netbox/config/__pycache__
 *.pyc
-singularity_ent/*
+singularity_ent
 *.crt
 *.key
 *.html
+velero-v1.2.0*
