--- a/createNamespaces.yaml
+++ b/createNamespaces.yaml
@@ -38,3 +38,9 @@ kind: Namespace
 apiVersion: v1
 metadata:
   name: monitoring
+
+---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: kubevirt
