--- a/forecastle/forecastle2001.yaml
+++ b/forecastle/forecastle2001.yaml
@@ -8,7 +8,10 @@ metadata:
     app: forecastle
     group: com.stakater.platform
     provider: stakater
-    version: "v1.0.50"
+    version: "v1.0.61"
+    chart: "forecastle-v1.0.61"
+    release: "forecastle"
+    heritage: "Tiller"
 data:
   config.yaml: |-
     customApps: {}
@@ -103,7 +106,10 @@ metadata:
     app: forecastle
     group: com.stakater.platform
     provider: stakater
-    version: "v1.0.50"
+    version: "v1.0.61"
+    chart: "forecastle-v1.0.61"
+    release: "forecastle"
+    heritage: "Tiller"
   name: forecastle
 spec:
   replicas: 1
@@ -126,7 +132,7 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: "stakater/forecastle:v1.0.50"
+          image: "stakater/forecastle:v1.0.61"
           name: forecastle
           volumeMounts:
           - name: forecastle-config
@@ -153,7 +159,6 @@ spec:
         secret:
           secretName: gatekeeper-fc
       serviceAccountName: forecastle
-
 ---
 # Source: forecastle/templates/ingress.yaml
 apiVersion: extensions/v1beta1
@@ -193,7 +198,10 @@ metadata:
     app: forecastle
     group: com.stakater.platform
     provider: stakater
-    version: "v1.0.50"
+    version: "v1.0.61"
+    chart: "forecastle-v1.0.61"
+    release: "forecastle"
+    heritage: "Tiller"
   name: forecastle
 ---
 kind: ClusterRole
@@ -204,7 +212,10 @@ metadata:
     app: forecastle
     group: com.stakater.platform
     provider: stakater
-    version: "v1.0.50"
+    version: "v1.0.61"
+    chart: "forecastle-v1.0.61"
+    release: "forecastle"
+    heritage: "Tiller"
 rules:
 - apiGroups: ["", "route.openshift.io", "extensions"]
   resources: ["ingresses", "routes", "namespaces"]
@@ -220,12 +231,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: forecastle-cluster-ingress-role-binding
-  # namespace: kube-system
   labels:
     app: forecastle
     group: com.stakater.platform
     provider: stakater
-    version: "v1.0.50"
+    version: "v1.0.61"
+    chart: "forecastle-v1.0.61"
+    release: "forecastle"
+    heritage: "Tiller"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -235,26 +248,7 @@ subjects:
   name: forecastle
   namespace: kube-system
 
-# ---
-# apiVersion: rbac.authorization.k8s.io/v1
-# kind: ClusterRoleBinding
-# metadata:
-#   name: forecastle-cluster-ingress-role-binding
-#   # namespace: monitoring
-#   labels:
-#     app: forecastle
-#     group: com.stakater.platform
-#     provider: stakater
-#     version: "v1.0.50"
-# roleRef:
-#   apiGroup: rbac.authorization.k8s.io
-#   kind: ClusterRole
-#   name: forecastle-cluster-ingress-role
-# subjects:
-# - kind: ServiceAccount
-#   name: forecastle
-#   # namespace: kube-system
-# ---
+---
 # Source: forecastle/templates/route.yaml
 
 ---
@@ -266,7 +260,10 @@ metadata:
     app: forecastle
     group: com.stakater.platform
     provider: stakater
-    version: "v1.0.50"
+    version: "v1.0.61"
+    chart: "forecastle-v1.0.61"
+    release: "forecastle"
+    heritage: "Tiller"
     expose: "false"
   name: forecastle
 spec:
@@ -279,27 +276,3 @@ spec:
     app: forecastle
     group: com.stakater.platform
     provider: stakater
-
-# ---
-# apiVersion: forecastle.stakater.com/v1alpha1
-# kind: ForecastleApp
-# metadata:
-#   name: grafana
-# spec:
-#   group: Monitoring
-#   icon: https://www.mytinydc.com/images/blog/blog-prometheus+grafana.png
-#   name: Grafana
-#   networkRestricted: false
-#   url: https://grafana.home.lab
-
-# ---
-# apiVersion: forecastle.stakater.com/v1alpha1
-# kind: ForecastleApp
-# metadata:
-#   name: prometheus
-# spec:
-#   group: Monitoring
-#   icon: https://www.mytinydc.com/images/blog/blog-prometheus+grafana.png
-#   name: Prometheus
-#   networkRestricted: false
-#   url: https://prometheus.home.lab
