--- a/jupyterHub/config.yaml
+++ b/jupyterHub/config.yaml
@@ -22,6 +22,10 @@ imagePullSecrets: []
 # ConfigurableHTTPProxy speaks with the actual ConfigurableHTTPProxy server in
 # the proxy pod.
 hub:
+  config:
+    JupyterHub:
+      admin_access: true
+      authenticator_class: dummy
   service:
     type: ClusterIP
     annotations: {}
@@ -53,10 +57,10 @@ hub:
       annotations: {}
       selector: {}
       accessModes:
-        - ReadWriteOnce
+        - ReadWriteMany
       storage: 1Gi
       subPath:
-      storageClassName:
+      storageClassName: "dyn-nfs"
     url:
     password:
   labels: {}
@@ -71,7 +75,7 @@ hub:
   extraVolumeMounts: []
   image:
     name: jupyterhub/k8s-hub
-    tag: '0.10.6'
+    tag: '0.11.1'
     pullPolicy: ''
     pullSecrets: []
   resources:
@@ -84,7 +88,7 @@ hub:
     allowPrivilegeEscalation: false
   services: {}
   pdb:
-    enabled: true
+    enabled: false
     minAvailable: 1
   networkPolicy:
     enabled: true
@@ -109,16 +113,22 @@ hub:
   templatePaths: []
   templateVars: {}
   livenessProbe:
-    enabled: false
-    initialDelaySeconds: 180
+    # The livenessProbe's aim to give JupyterHub sufficient time to startup but
+    # be able to restart if it becomes unresponsive for ~5 min.
+    enabled: true
+    initialDelaySeconds: 300
     periodSeconds: 10
-    failureThreshold: 3
-    timeoutSeconds: 1
+    failureThreshold: 30
+    timeoutSeconds: 3
   readinessProbe:
+    # The readinessProbe's aim is to provide a successful startup indication,
+    # but following that never become unready before its livenessProbe fail and
+    # restarts it if needed. To become unready following startup serves no
+    # purpose as there are no other pod to fallback to in our non-HA deployment.
     enabled: true
     initialDelaySeconds: 0
     periodSeconds: 2
-    failureThreshold: 3
+    failureThreshold: 1000
     timeoutSeconds: 1
   existingSecret:
 
@@ -189,6 +199,7 @@ proxy:
       enabled: true
       initialDelaySeconds: 0
       periodSeconds: 2
+      failureThreshold: 1000
     resources:
       requests:
         cpu: 200m
@@ -205,6 +216,9 @@ proxy:
                 cidr: 0.0.0.0/0
       interNamespaceAccessLabels: ignore
       allowedIngressPorts: [http, https]
+    pdb:
+      enabled: false
+      minAvailable: 1
   # traefik relates to the autohttps pod, which is responsible for TLS
   # termination when proxy.https.type=letsencrypt.
   traefik:
@@ -214,10 +228,12 @@ proxy:
       allowPrivilegeEscalation: false
     image:
       name: traefik
-      # tag for Traefik should be thoroughly tested before bumping, because it
-      # has been prone to have intermittency issues in the past. See for example
+      # If you bump the tag for Traefik, please help out by keeping an eye out
+      # for intermittency failures in the test suite on acquiring HTTPS
+      # certificates as there has been a lot of struggles with in this in the
+      # past. For example:
       # https://github.com/jupyterhub/zero-to-jupyterhub-k8s/pull/1857.
-      tag: v2.3.2 # ref: https://hub.docker.com/_/traefik?tab=tags
+      tag: v2.3.7 # ref: https://hub.docker.com/_/traefik?tab=tags
       pullPolicy: ''
       pullSecrets: []
     hsts:
@@ -242,6 +258,9 @@ proxy:
                 cidr: 0.0.0.0/0
       interNamespaceAccessLabels: ignore
       allowedIngressPorts: [http, https]
+    pdb:
+      enabled: false
+      minAvailable: 1
   secretSync:
     containerSecurityContext:
       runAsUser: 65534  # nobody user
@@ -249,14 +268,11 @@ proxy:
       allowPrivilegeEscalation: false
     image:
       name: jupyterhub/k8s-secret-sync
-      tag: '0.10.6'
+      tag: '0.11.1'
       pullPolicy: ''
       pullSecrets: []
     resources: {}
   labels: {}
-  pdb:
-    enabled: true
-    minAvailable: 1
   https:
     enabled: false
     type: letsencrypt
@@ -273,26 +289,6 @@ proxy:
       key: tls.key
       crt: tls.crt
     hosts: []
-
-
-# auth relates to the configuration of JupyterHub's Authenticator class.
-auth:
-  type: dummy
-  whitelist:
-    users:
-  admin:
-    access: true
-    users:
-  dummy:
-    password:
-  ldap:
-    dn:
-      search: {}
-      user: {}
-    user: {}
-  state:
-    enabled: false
-    cryptoKey:
 
 
 # singleuser relates to the configuration of KubeSpawner which runs in the hub
@@ -313,7 +309,7 @@ singleuser:
   networkTools:
     image:
       name: jupyterhub/k8s-network-tools
-      tag: '0.10.6'
+      tag: '0.11.1'
       pullPolicy: ''
       pullSecrets: []
   cloudMetadata:
@@ -360,13 +356,13 @@ singleuser:
     capacity: 10Gi
     homeMountPath: /home/jovyan
     dynamic:
-      storageClass:
+      storageClass: "dyn-nfs"
       pvcNameTemplate: claim-{username}{servername}
       volumeNameTemplate: volume-{username}{servername}
       storageAccessModes: [ReadWriteOnce]
   image:
     name: jupyterhub/k8s-singleuser-sample
-    tag: '0.10.6'
+    tag: '0.11.1'
     pullPolicy: ''
     pullSecrets: []
   startTimeout: 300
@@ -422,8 +418,11 @@ scheduling:
       runAsGroup: 65534 # nobody group
       allowPrivilegeEscalation: false
     image:
+      # IMPORTANT: Bumping the minor version of this binary should go hand in
+      #            hand with an inspection of the user-scheduelrs RBAC resources
+      #            that we have forked.
       name: k8s.gcr.io/kube-scheduler
-      tag: v1.19.2
+      tag: v1.19.7
       pullPolicy: ''
       pullSecrets: []
     nodeSelector: {}
@@ -473,7 +472,7 @@ prePuller:
     # image and the configuration below relates to the hook-image-awaiter Job
     image:
       name: jupyterhub/k8s-image-awaiter
-      tag: '0.10.6'
+      tag: '0.11.1'
       pullPolicy: ''
       pullSecrets: []
     containerSecurityContext:
@@ -518,7 +517,7 @@ ingress:
     - jupyter.home.lab
   pathSuffix: ''
   tls:
-    - secretName: jupyter-selfsigned-cert-tls
+    - secretName: "ca-key-pair"
       hosts:
       - jupyter.home.lab
 
@@ -535,4 +534,6 @@ cull:
 
 debug:
   enabled: false
+
+global: {}
 
