--- a/registry/harbor/values.yaml
+++ b/registry/harbor/values.yaml
@@ -16,7 +16,7 @@ expose:
     # The tls certificate can be generated manually or by cert manager
     # 3) none: configure no tls certificate for the ingress. If the default
     # tls certificate is configured in the ingress controller, choose this option
-    certSource: none
+    certSource: secret
     auto:
       # The common name used to generate the certificate, it's necessary
       # when the type isn't "ingress"
@@ -25,12 +25,12 @@ expose:
       # The name of secret which contains keys named:
       # "tls.crt" - the certificate
       # "tls.key" - the private key
-      secretName: "harbor-selfsigned-cert-tls"
+      secretName: "ca-key-pair"
       # The name of secret which contains keys named:
       # "tls.crt" - the certificate
       # "tls.key" - the private key
       # Only needed when the "expose.type" is "ingress".
-      notarySecretName: ""
+      notarySecretName: "ca-key-pair"
   ingress:
     hosts:
       core: harbor.home.lab
@@ -670,7 +670,7 @@ notary:
   # The secret must contain keys named ca.crt, tls.crt and tls.key that
   # contain the CA, certificate and private key.
   # They will be generated if not set.
-  secretName: ""
+  secretName: "ca-key-pair"
 
 database:
   # if external database is used, set "type" to "external"
