--- a/persistentVolume/persistentVolume.yaml
+++ b/persistentVolume/persistentVolume.yaml
@@ -60,4 +60,4 @@ spec:
   persistentVolumeReclaimPolicy: Retain # Reclaim policies are defined below 
   nfs:
     server: node01.home.lab # Please change this to your NFS server
-    path: /clusterfs # Please change this to the relevant share
+    path: /mnt/usb5 # Please change this to the relevant share
